--- a/vignettes/Main.Rmd
+++ b/vignettes/Main.Rmd
@@ -170,7 +170,7 @@ resolution is indicated with our owns first and then the distance used by
 @burger2021.
 
 | Predictor class                                                      | Variable Type  | Zonal Mean Resolution / [3 predictors per class] [abbreviation] |
-|----------------------------------------------------------------------|----------------|-----------------------------------------------------------------|
+|-----------------------------|-------------------|----------------------------|
 | 2m Temperature in °C (Zollikofen) for the time period 2019 - 2022    | Meteorological | 15 minutes / [1h mean, 6,12,24,72,120 hours rolling mean]       |
 | Precipitation in mm (Zollikofen) for the time period 2019 - 2022     | Meteorological | 15 minutes / [1h mean, 6,12,24,72,120,240 hours rolling sum]    |
 | Radiation in $W*m^{-2}$ (Zollikofen) for the time period 2019 - 2022 | Meteorological | 15 minutes / [1h mean]                                          |
@@ -200,7 +200,7 @@ spatially averaged to obtain the layers most effective as shown in
 web into R. Table 1 provides a brief overview of the data we will use.
 
 | Predictor class                                                      | Variable Type    | Zonal Mean Resolution / [3 predictors per class] [@burger2021] |
-|----------------------------------------------------------------------|------------------|----------------------------------------------------------------|
+|------------------------------|-------------------|---------------------------|
 | 2m Temperature in °C [Zollikofen] for the time period 2019 - 2022    | Meteorological   | 15 minutes / [1h mean, 6,12,24,72,120 hours rolling mean]      |
 | Precipitation in mm [Zollikofen] for the time period 2019 - 2022     | Meteorological   | 15 minutes / [1h mean, 6,12,24,72,120,240 hours rolling sum]   |
 | Radiation in $W*m^{-2}$ [Zollikofen] for the time period 2019 - 2022 | Meteorological   | 15 minutes / [1h mean]                                         |
@@ -302,7 +302,7 @@ Based on this selection, a formula is now generated, which is processed
 into a recipe. This is now the basis for creating the models.
 
 | Variable which is not a predictor | Reason                                                                                                                                                                       |
-|-----------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|--------------------|-------------------------------------------------------|
 | Log_Nr, name                      | Does not make sens for spatial upscaling                                                                                                                                     |
 | temperature                       | It is the target                                                                                                                                                             |
 | timestamp, year, month, day, hour | Because it is controversial whether time and date should be used as predictors. The model could simply learn the mean of the time and not the underlying pattern.            |
@@ -553,7 +553,7 @@ must compute $O(cv⋅n⋅d+cv⋅k⋅n)$ distances, where "n" is the number of
 observations, "d" is the number of dimensions, "cv" is the number of
 cross-validations, and "k" is the hyperparameter. For this reason, a
 typical device may require several hours. The safety feature limits the
-data input to 150,000 rows and limits therefore the computational time to
+data input to 100,000 rows and limits therefore the computational time to
 about 5 minutes. The adjustment takes place automatically, and you will be
 informed about how many rows are removed and what percentage of the
 original data remains. Note that model tuning takes place for the regular
@@ -783,7 +783,13 @@ balanced amount of negative and positive outliers (mean ≈ median). This
 conclusion is further supported by boxplots (fifth element).
 
 The third element is the visualization. It illustrates that the predicted
-values underestimate the real values.
+values underestimate the real values. As explained in the implementation of
+the knn model we had to limit the data set to 100,000 rows because of the
+high computational time. Here, we had to do the same since the evaluation
+function predicts the target. The evaluation function recognizes a knn
+model and reduce the training data set to about 100,000 rows and the test
+data set to about 4500 rows. If we do so, the computational time is about 5
+minutes.
 
 The fourth element consists of boxplots by logger side. It appears that the
 IQR for each box is relatively stable. However, the whiskers vary (small
@@ -989,15 +995,15 @@ accuracy due to a slightly higher bias (approximately 0.04 °C), its
 exceptional $R^2$ and RMSE lead us to consider it as our best model.
 
 | Model                | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
-|----------------------|----------------|-----------------|----------------|-----------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Linear Regression    | 0.45           | 0.88 °C         | 0.69 °C        | 0.088 °C        |
 | KNN [reduced to 13%] | 0.48           | 0.86 °C         | 0.66 °C        | 0.03 C °        |
 | Random Forest        | 0.73           | 0.62 °C         | 0.46 °C        | 0.083 °C        |
 | XGB Boost            | \-             | \-              | \-             | \-              |
 | Neuronal Network     | \-             | \-              | \-             | \-              |
 
-: **TABLE 3:** Overview of the evaluation of the models in the
-regular-mode.
+: **TABLE 3:** Overview of the results and evaluation of the models in the
+regular-mode (all meteorologic data and our own geospatial layers).
 
 In order to comprehensively assess the quality of our models, we generated
 and evaluated them in Burger-regular-mode, utilizing full meteorologic data
@@ -1010,7 +1016,7 @@ the regular mode. A brief summary of these findings is presented in Table
 4.
 
 Upon comparison with our own models (full meteorologic data and our own
-geospatial layers), we observed that each model performs superiorly in
+geospatial layers), we observed that each model performs superior in
 Burger-regular mode. Notably, the most substantial differences in
 explaining variance are observed in the KNN model, where our own KNN model
 lags by 8%. While there is no significant difference in precision (RMSE),
@@ -1019,142 +1025,107 @@ lower). The bias (accuracy) is significantly reduced in the random forest
 model of the Burger mode (approximately 0.03°C).
 
 | Model                | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
-|----------------------|----------------|-----------------|----------------|-----------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Linear Regression    | 0.49           | 0.91 °C         | 0.7 °C         | 0.001 °C        |
 | KNN [reduced to 13%] | 0.55           | 0.84 °C         | 0.63 °C        | -0.03 C °       |
 | Random Forest        | 0.78           | 0.62 °C         | 0.45 °C        | 0.03 °C         |
 | XGB Boost            | \-             | \-              | \-             | \-              |
 | Neuronal Network     | \-             | \-              | \-             | \-              |
 
-: **TABLE 4:** Overview of the evaluation of the models in the
-Burger-regular-mode.
+: **TABLE 4:** Overview of the results and evaluation of the models in the
+Burger-regular-mode (all meteorologic data and the geospatial layers of
+@burger2021).
 
 ### Summary for the Demo Modes
 
-To complete our analysis, we also summarize the results of the demo-mode
-(table 5) and the burger-demo-mode (table 6).
-
-VALUES ARE OK (11.12.2023)!!
-
-| Model             | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
-|-------------------|----------------|-----------------|----------------|-----------------|
-| Linear Regression | 0.455          | 0.899           | 0.711          | 0.102           |
-| KNN               | 0.542          | 0.824           | 0.628          | 0.093           |
-| Random Forest     | 0.522          | 0.846           | 0.642          | 0.48            |
-| XGB Boost         | \-             | \-              | \-             | \-              |
-| Neuronal Network  | \-             | \-              | \-             | \-              |
-
-: **TABLE 5:** Overview of the evaluation and results of the models with
-data from Burger et al. (2019) with 5% of the data.
-
-To fully implement the Open Sciences approach, the models can be computed
-using the following code chunks. Further, for every model, a short synopsis
-of the optimized hyperparameters is given. It must therefore be decided
-before running the code chunk whether the hyperparameters determined by us
-are to be used or whether the hyperparameters are to be optimized.
-
-| Element of the list | What do you find                                                                               |
-|---------------------|------------------------------------------------------------------------------------------------|
-| 1                   | returns a table with the main metrics (RSQ, RMSE, MAE and Bias)                                |
-| 2                   | retunrs a visualization of the model (Training and Test set) and shows RSQ, RMSE and the bias. |
-| 3                   | returns a boxplot for each logger station (24h)                                                |
-| 4                   | returns a boxplot for each hour of the day                                                     |
-
-: **TABLE 2:** Overview of the returned list of the evaluation function
-
-The aim of this project is the comparison of machine learning techniques to
-a linear regression. Further, we want to explore the superior of machine
-learning compared to a linear regression. Table 3 gives you an overview
-about our results, if you use the entire 'combined' data set. You see, that
-both KNN and random forest are superior compared to the linear regression
-model.
-
-The random forest model explains about 73% of the variance. The RSME is
-about 0.63 °C. Note that the error of a single LCD in the climate network
-of the city of Bern is about 1.5°C (see Burger et all 2019). Further we can
-see, that data scattering is about 0.2°C lower than for a KNN- or lm-model
-(accuracy). The bias is for all models about 0.07°C (systematic error /
-precision). It is positive and therefore our models overestimate the
-temperature (see evaluation and access the second element of the list).
-
-The XGB Boost and the neuronal network are additional and should show you,
-that there are further techniques which could be explored. But those model
-we did not taken into account.
-
-VALUES ARE OK (11.12.2023)!!
-
-| Model                | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
-|----------------------|----------------|-----------------|----------------|-----------------|
-| Linear Regression    | 0.45           | 0.88 °C         | 0.69 °C        | 0.088 °C        |
-| KNN [reduced to 13%] | 0.48           | 0.86 °C         | 0.65 °C        | 0.04 C °        |
-| Random Forest        | 0.73           | 0.62 °C         | 0.46 °C        | 0.083 °C        |
-| XGB Boost            | \-             | \-              | \-             | \-              |
-| Neuronal Network     | \-             | \-              | \-             | \-              |
-
-: **TABLE 3:** Overview of the evaluation of the models in the regular
-mode.
-
-As mentioned, the model calculation can be very time intensive. Table 4
-shows the results for approach with reduced data. Overall we can say, that
-the models perform less. All values are lesser than in table 3. Note the
-high bias for the random forest. The model highli overestimate the
-temperature. We do not have an explanation for this. May be there is a
-problem with the reducing process. If we only use 5% of our data, then we
-lose a lot of information. If we lose all information about a certain
-logger station but the model predict this station, the it could b that the
-model perfoms worse. But we are not sure and more investigations are
-needed. But as a conclusion we can say, that more data improve the models.
-
-VALUES ARE OK (11.12.2023)!!
+To conclude our analysis, we present a summary of the results from both the
+demo mode (Table 5) and the Burger demo mode (Table 6). In these modes, we
+utilized only approximately 5% of randomly chosen meteorologic data, along
+with either our geospatial layers (for demo mode) or the geospatial layers
+of @burger2021 (Burger demo mode). Table 5 provides an overview of the
+results for the demo mode. Once again, the random forest emerges as the
+best model, explaining 2--5% more variance than other models and
+demonstrating superior precision with the lowest RMSE. However, its bias is
+approximately 0.18°C higher than the bias of the KNN model, which excels in
+accuracy and overall performance.
 
 | Model             | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
-|-------------------|----------------|-----------------|----------------|-----------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Linear Regression | 0.422          | 0.93 °C         | 0.739 °C       | 0.125 °C        |
 | KNN               | 0.457          | 0.91 °C         | 0.704 °C       | 0.05 °C         |
 | Random Forest     | 0.477          | 0.899 °C        | 0.661 °C       | 0.184 °C        |
 | XGB Boost         | \-             | \-              | \-             | \-              |
 | Neuronal Network  | \-             | \-              | \-             | \-              |
 
-: **TABLE 6:** Overview of the evaluation of the models with 5 % of the
-data.
+: **TABLE 5:** Overview of the results and evaluation of the models with 5
+% of the data and our own geospatial layer.
+
+In order to comprehensively assess the quality of our models, we generated
+and evaluated them in Burger-demo-mode, utilizing complete meteorologic
+data but incorporating the geospatial layer from @burger. In this context,
+the knn model exhibits the best performance, explaining the highest amount
+of variance (highest $R^2$), achieving the best precision (lowest RMSE),
+and demonstrating superior accuracy (lowest bias).
+
+However, it's crucial to approach the results of the two demo modes with
+particular caution, as their significance is limited. The hyperparameters
+were not tuned for these datasets. These models were solely generated to
+offer a quick yet adequate insight into this study without incurring
+excessive computational time. The results presented in Tables 3 and 4 hold
+the most meaningful insights, as they directly address the objectives of
+this study.
+
+| Model             | RSQ [Test set] | RMSE [Test set] | MAE [Test set] | Bias [Test set] |
+|---------------|---------------|---------------|---------------|---------------|
+| Linear Regression | 0.45           | 0.9 °C          | 0.7 °C         | 0.1 °C          |
+| KNN               | 0.54           | 0.82 °C         | 0.63 °C        | 0.09 °C         |
+| Random Forest     | 0.52           | 0.85 °C         | 0.64 °C        | 0.12 °C         |
+| XGB Boost         | \-             | \-              | \-             | \-              |
+| Neuronal Network  | \-             | \-              | \-             | \-              |
+
+: **TABLE 6:** Overview of the results and evaluation of the models with 5
+% of the data and the geospatial layer of @burger2021.
 
 ## Map^WP2^
 
-This subsections aims to generate maps to visualize our key findings. For
-this purpose we defined a default-vector. This vector shows the numeric
-default values for each variable (see table x). Further, we defined
-reasonable intervals for each variables. Because we did not train our
-models with extrem values (because we do not have a lot) the model perform
-worse with extreme values. That is why we took the hihest values from
-MeteoSchweiz and reduced it by about 10%. We recommend no to work with
-those extreme values. Moreover, the values should be realistic. For example
-it is unrealistic if you set your 6h temperature mean to 20°C and your 12h
-mean to -5°C. Please consider this if you play around.
+This subsection aims to generate maps to visualize our key findings. The
+map displays the spatial distribution of temperature anomalies for the
+suburban area of the city of Bern. To achieve this, we defined multiple
+vectors, each representing a typical meteorologic situation. You also have
+the option to define your own vector with custom values. However, it's
+important to note that the models are not trained for extremes.
+Additionally, ensure that you avoid contradictions (e.g., the sum of 3D
+precipitation \< sum of 1D precipitation).
 
-| Variable \| Default \| Interval \|
+Table 7 provides a concise overview of possible intervals for each
+variable. These intervals are derived from extreme events recorded by
+[MeteSchweiz](https://www.meteoschweiz.admin.ch/klima/klima-der-schweiz/rekorde-und-extreme.html).
+We reduced the intervals by about 10% on both sides, where possible. Please
+keep this in mind when exploring and adjusting values.
 
-\|-------------------\|-------------------\|-------------------------------------\|
+| Variable                 | Default       | Realistic Interval                                    |
+|--------------------|------------|-------------------------------------------|
+| Temperature              | 22 °C         | $x[°C] \in[-15\leq x \leq 35]$                        |
+| Rain                     |               | $x[mm] \in[0 \leq x \leq 200]$                        |
+| Radiation                |               | $x[W*m^{-2}] \in[0 \leq x \leq 300]$, for a 10' mean  |
+| Wind speed               | 8 $m*s^{-1}$  |  $x[m*s^{-1}] \in[0 \leq x \leq 20]$                  |
+| Wind direction           |               | $x[°] \in[0 \leq x \leq 360]$, with 0° = N, 180° = S  |
+| 6h mean temperature      | 22 °C         | $x[°C] \in[-15 \leq x \leq 35]$                       |
+| 12h mean temperature     | 19 °C         | $x[°C] \in[-15 \leq x \leq 35]$                       |
+| 1d mean temperature      | 20 °C         | $x[°C] \in[-15 \leq x \leq 35]$                       |
+| 3d mean temperature      | 18 °C         | $x[°C] \in[-15 \leq x \leq 35]$                       |
+| 5d mean temperature      | 17 °C         | $x[°C] \in[-15 \leq x \leq 35]$                       |
+| 6h precipitation [sum]   | 30 mm         | $x[mm] \in[0 \leq x \leq 100]$                        |
+| 12h precipitation [sum]  | 25 mm         | $x[mm] \in[0 \leq x \leq 200]$                        |
+| 1d precipitation [sum]   | 20 mm         | $x[mm] \in[0 \leq x \leq 400]$                        |
+| 3d precipitation [sum]   | 15 mm         | $x[mm] \in[0 \leq x \leq 600]$                        |
+| 5d precipitation [sum]   | 10 mm         | $x[mm] \in[0 \leq x \leq 600]$                        |
+| 19d precipitation [sum]  | 5 mm          | $x[mm] \in[0 \leq x \leq 600]$                        |
 
-| Temperature \| 22 °C \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| Rain \| 5 mm \| $x[mm] \in[0 \leq x \leq 200]$ \|
-| Radiation \| 290 $W*m^{-2}$ \| $x[W*m^{-2}] \in[0 \leq x \leq 300]$, for a 10' mean \|
-| Wind speed \| 8 $m*s^{-1}$ \| $x[m*s^{-1}] \in[0 \leq x \leq 20]$ \|
-| Wind direction \| 200 ° (west wind) \| $x[°] \in[0 \leq x \leq 360]$, with 0° = N, 180° = S \|
-| 6h mean temperature \| 22 \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| 12h mean temperature \| 19 \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| 1d mean temperature \| 20 \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| 3d mean temperature \| 18 \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| 5d temperature \| 17 \| $x[°C] \in[-15 \leq x \leq 35]$ \|
-| 6h precipitation [sum] \| 0 \| $x[mm] \in[0 \leq x \leq 100]$ \|
-| 12h precipitation [sum] \| 0 \| $x[mm] \in[0 \leq x \leq 200]$ \|
-| 1d precipitation [sum] \| 20 mm \| $x[mm] \in[0 \leq x \leq 400]$ \|
-| 3d precipitation [sum] \| 15 mm \| $x[mm] \in[0 \leq x \leq 600]$ \|
-| 5d precipitation [sum] \| 10 mm \| $x[mm] \in[0 \leq x \leq 600]$ \|
-| 10d precipitation [sum] \| 5 mm \| $x[mm] \in[0 \leq x \leq 600]$ \|
-
-: **Table x:** Overview about the default values for the variables used to
+: **Table 7:** Overview about the default values for the variables used to
 predict the map. Further, it shows reasonable possible values for the
-variables (SOURCE: METEOSCHWEIZ).
+variables
+[MeteoSuisse](https://www.meteoschweiz.admin.ch/klima/klima-der-schweiz/rekorde-und-extreme.html).
 
 # Spatial Upscaling^WP2^
 
@@ -1181,6 +1152,42 @@ map_generater(model = random_forest, meteoswiss_input = normal_summarevening)
 # Discussion
 
 ## Data^WP1^
+
+To fully implement the Open Sciences approach, the models can be computed
+using the following code chunks. Further, for every model, a short synopsis
+of the optimized hyperparameters is given. It must therefore be decided
+before running the code chunk whether the hyperparameters determined by us
+are to be used or whether the hyperparameters are to be optimized.
+
+The aim of this project is the comparison of machine learning techniques to
+a linear regression. Further, we want to explore the superior of machine
+learning compared to a linear regression. Table 3 gives you an overview
+about our results, if you use the entire 'combined' data set. You see, that
+both KNN and random forest are superior compared to the linear regression
+model.
+
+The random forest model explains about 73% of the variance. The RSME is
+about 0.63 °C. Note that the error of a single LCD in the climate network
+of the city of Bern is about 1.5°C (see Burger et all 2019). Further we can
+see, that data scattering is about 0.2°C lower than for a KNN- or lm-model
+(accuracy). The bias is for all models about 0.07°C (systematic error /
+precision). It is positive and therefore our models overestimate the
+temperature (see evaluation and access the second element of the list).
+
+The XGB Boost and the neuronal network are additional and should show you,
+that there are further techniques which could be explored. But those model
+we did not taken into account.
+
+As mentioned, the model calculation can be very time intensive. Table 4
+shows the results for approach with reduced data. Overall we can say, that
+the models perform less. All values are lesser than in table 3. Note the
+high bias for the random forest. The model highli overestimate the
+temperature. We do not have an explanation for this. May be there is a
+problem with the reducing process. If we only use 5% of our data, then we
+lose a lot of information. If we lose all information about a certain
+logger station but the model predict this station, the it could b that the
+model perfoms worse. But we are not sure and more investigations are
+needed. But as a conclusion we can say, that more data improve the models.
 
 ## Methodology
 
